--- a/1_firebase_auth/package.json
+++ b/1_firebase_auth/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
